1999-10-05  Akim Demaille  <akim@epita.fr>

	When you rely on the `t' flag of sed for the immediately
	preceding substitution, use a combination of `: foo; t foo'.
	Additionally, work around a bug in IRIX sed.
	Suggested by Ken Pizzini.

	* acgeneral.m4 (AC_OUTPUT_HEADER): Added a label and a test in the
	sed code of `$ac_cs_root.hdr'.

1999-10-05  Akim Demaille  <akim@epita.fr>

	Implement AC_PATH_TOOL.
	Submited by Gary V. Vaughan.

	* acgeneral.m4 (AC_PATH_TOOL): New macro.
	* autoconf.texi (Generic Programs): Document.

1999-10-05  Akim Demaille  <akim@epita.fr>

	Handle arbitrary version numbers.
	Reported by H.J. Lu.

	* acgeneral.m4 (m4_split): Support a second optional argument: a
 	regexp to specify where to split.
	(m4_compare): New macro, compares arbitrary long m4 lists of
 	integers.
	(AC_PREREQ_SPLIT, AC_PREREQ_CANON, AC_PREREQ_COMPARE): Removed,
	replaced by more generic macros.
	(AC_PREREQ): Reimplemented, using m4_compare and m4_split.

1999-10-04  Akim Demaille  <akim@epita.fr>

	Beware of  the expansions of $n in comments.

	* acgeneral.m4 (AC_OUTPUT): Changed $1 into $[1] in dnls.

1999-10-04  Akim Demaille  <akim@epita.fr>

	Revert partially the previous changes: AC_CHECK_HEADERS_DIRENT is
	used by AC_HEADER_DIRENT.

	* autoheader.m4: Restablish the hook for AC_CHECK_HEADERS_DIRENT.

	* acspecific.m4 (AC_CHECK_HEADERS_DIRENT, AC_CHECK_HEADER_DIRENT):
 	Reinserted.

1999-10-02  Akim Demaille  <akim@epita.fr>

	AC_DIR_HEADERS is hasbeen'ed.

	* acspecific.m4 (AC_DIR_HEADER): Raised from obsolete to hasbeen.

	* acspecific.m4 (AC_CHECK_HEADERS_DIRENT, AC_CHECK_HEADER_DIRENT):
 	Removed, were used only by AC_DIR_HEADER and were not documented.

	* autoheader.m4: Remove the hooks for AC_CHECK_HEADERS_DIRENT.

	* autoconf.texi (Particular Headers): Removed the documentation of
	AC_DIR_HEADER.

	* autoconf.texi (Environment Variables): Remove the very last
	traces of documentation of --env-VAR.

1999-10-02  Akim Demaille  <akim@epita.fr>
